# NeuralLib

./: .gitignore  pyproject.toml
NeuralLib/: __init__.py  config.py
NeuralLib/architectures/: base.py  biosignals_architectures.py  post_process_fn.py  train_architectures.py  upload_to_hugging.py
NeuralLib/model_hub/: TL.py  __init__.py  production_model.py
NeuralLib/model_hub/.ipynb_checkpoints/: production_model-checkpoint.py
NeuralLib/utils/: utils.py
Tutorial4BIOSTEC/: Biostec1_Introduction.ipynb  Biostec2_PretrainedModelUsage.ipynb  Biostec3_Train_from_scratch.ipynb  Biostec4_TL_training.ipynb  test_TL.py
Tutorial4BIOSTEC/.ipynb_checkpoints/: Biostec2_PretrainedModelUsage-Copy1-checkpoint.ipynb  Biostec2_PretrainedModelUsage-checkpoint.ipynb  Biostec2_PretrainedModelUsage_and_TL-checkpoint.ipynb  Biostec3_Train_from_scratch-checkpoint.ipynb
data/ecg_peak/mitbih/x/: 108_seg0012.npy  222_seg0115.npy
data/ecg_peak/mitbih/y_bin/: 108_seg0012.npy  222_seg0115.npy
data/ecg_peak/sample/x/test/: 1.npy  2.npy  3.npy  4.npy  5.npy
data/ptb_xl/dataset_denoiser/X_test/: 0.npy  1.npy  2.npy  3.npy  4.npy  5.npy
data/ptb_xl/dataset_denoiser/Y_test/: 0.npy  1.npy  2.npy  3.npy  4.npy  5.npy
hugging_prodmodels/ECGDenoiser/: README.md  hparams.yaml  model_weights.pth  training_info.json
hugging_prodmodels/ECGPeakDetector/: hparams.yaml  training_info.json
hugging_prodmodels/TEST_ECGPeakDetector/: README.md  model_weights.pth
tutorials/: 1_train_retrain_test_model.py  2_grid_search_find_best.py  4_use_prod_model.py  5_transfer-learning.py
(+25 files in other folders)
